// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The breakout fragment builds as expected when it includes all attributes The parsed breakout fragment matches the snapshot on file 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
  ],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": "#7694e4",
    "icon": "http://localhost:8080/topic-assets/mock-topic-uri/images/cat.svg",
    "iconSize": "large",
    "title": "Advice from a cat",
  },
  "dependencyUris": Array [],
  "digest": "6498146ca25634fdc5c2f01e7ba935d5",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`The breakout fragment builds as expected when it includes an icon The parsed breakout fragment matches the snapshot on file 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
  ],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": undefined,
    "icon": "https://api.iconify.design/mdi/lightbulb-on-10.svg",
    "iconSize": "small",
    "title": "Tip",
  },
  "dependencyUris": Array [],
  "digest": "f59a0ce29118490d1a647ed5fc41b8be",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;

exports[`The simple breakout fragment builds as expected The parsed simple breakout fragment matches the snapshot on file 1`] = `
Object {
  "childUris": Array [
    "test-fragment-uri",
  ],
  "contentType": "Breakout",
  "contents": "",
  "data": Object {
    "color": undefined,
    "iconSize": "small",
    "title": "Tip",
  },
  "dependencyUris": Array [],
  "digest": "7f34855b379b45262bd31e051a95daad",
  "displayConditions": Array [],
  "documentUri": "mock-document-uri",
  "isRequired": false,
  "isStateful": false,
  "uri": "test-fragment-uri",
}
`;
